--- a/package.json
+++ b/package.json
@@ -8,12 +8,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fullpage/react-fullpage": "^0.1.19",
+    "@google/model-viewer": "^1.10.1",
+    "@tailwindcss/forms": "^0.4.0",
+    "@vechaiui/core": "^0.6.0",
+    "@vechaiui/react": "^0.2.1",
+    "awesome-react-icons": "^1.4.8",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-minimal-side-navigation": "^1.9.2",
+    "react-offcanvas": "^0.4.0",
+    "styled-jsx": "^5.0.0"
   },
   "devDependencies": {
-    "eslint": "8.8.0",
-    "eslint-config-next": "12.0.10"
+    "autoprefixer": "^10.4.0",
+    "eslint": "^8.8.0",
+    "eslint-config-next": "12.0.10",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "postcss": "^8.4.4",
+    "tailwindcss": "^3.0.0"
   }
 }
