--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/pro-light-svg-icons": "^6.0.0",
+    "@fortawesome/pro-solid-svg-icons": "^6.0.0",
+    "@fortawesome/pro-thin-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
     "@fullpage/react-fullpage": "^0.1.19",
     "@google/model-viewer": "^1.10.1",
     "@tailwindcss/forms": "^0.4.0",
@@ -19,6 +24,7 @@
     "react-dom": "17.0.2",
     "react-minimal-side-navigation": "^1.9.2",
     "react-offcanvas": "^0.4.0",
+    "sass": "^1.49.7",
     "styled-jsx": "^5.0.0"
   },
   "devDependencies": {
