--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@fortawesome/react-fontawesome": "^0.1.17",
     "@fullpage/react-fullpage": "^0.1.19",
     "@google/model-viewer": "^1.10.1",
+    "@openzeppelin/contracts": "^4.5.0",
     "@tailwindcss/forms": "^0.4.0",
+    "@uniswap/v3-periphery": "^1.4.0",
     "@vechaiui/core": "^0.6.0",
     "@vechaiui/react": "^0.2.1",
     "awesome-react-icons": "^1.4.8",
