--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@google/model-viewer": "^1.10.1",
     "@openzeppelin/contracts": "^4.5.0",
     "@tailwindcss/forms": "^0.4.0",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
+    "@uniswap/v3-core": "^1.0.1",
     "@uniswap/v3-periphery": "^1.4.0",
     "@vechaiui/core": "^0.6.0",
     "@vechaiui/react": "^0.2.1",
@@ -36,6 +38,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "postcss": "^8.4.4",
+    "prettier": "^2.5.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
     "tailwindcss": "^3.0.0"
   }
 }
