--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/pro-light-svg-icons": "^6.0.0",
     "@fortawesome/pro-solid-svg-icons": "^6.0.0",
@@ -16,12 +18,9 @@
     "@fullpage/react-fullpage": "^0.1.19",
     "@google/model-viewer": "^1.10.1",
     "@openzeppelin/contracts": "^4.5.0",
-    "@tailwindcss/forms": "^0.4.0",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "@uniswap/v3-core": "^1.0.1",
     "@uniswap/v3-periphery": "^1.4.0",
-    "@vechaiui/core": "^0.6.0",
-    "@vechaiui/react": "^0.2.1",
     "@walletconnect/web3-provider": "^1.7.1",
     "awesome-react-icons": "^1.4.8",
     "next": "12.0.10",
@@ -29,20 +28,15 @@
     "react-dom": "17.0.2",
     "react-minimal-side-navigation": "^1.9.2",
     "react-offcanvas": "^0.4.0",
-    "sass": "^1.49.7",
-    "styled-jsx": "^5.0.0",
     "web3": "^1.7.0",
     "web3modal": "^1.9.5"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.0",
     "eslint": "^8.8.0",
     "eslint-config-next": "12.0.10",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "postcss": "^8.4.4",
     "prettier": "^2.5.1",
-    "prettier-plugin-solidity": "^1.0.0-beta.19",
-    "tailwindcss": "^3.0.0"
+    "prettier-plugin-solidity": "^1.0.0-beta.19"
   }
 }
