--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,16 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 # vercel
 .vercel
+
+
+coverage
+coverage.json
+typechain
+
+#Hardhat files
+cache
+artifacts
