--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-bootstrap": "^2.2.0",
     "react-dom": "17.0.2",
     "sass": "^1.49.9",
+    "swiper": "^8.0.7",
     "web3": "^1.7.0",
     "web3modal": "^1.9.5"
   },
