--- a/package.json
+++ b/package.json
@@ -31,8 +31,19 @@
     "react-dom": "17.0.2",
     "sass": "^1.49.9",
     "swiper": "^8.0.7",
-    "web3": "^1.7.0",
-    "web3modal": "^1.9.5"
+    "@ethersproject/bignumber": "^5.4.2",
+    "@ethersproject/experimental": "^5.5.0",
+    "@ethersproject/providers": "^5.5.1",
+    "@ethersproject/units": "^5.4.0",
+    "@web3-react/core": "8.0.18-beta.0",
+    "@web3-react/eip1193": "8.0.13-beta.0",
+    "@web3-react/empty": "8.0.10-beta.0",
+    "@web3-react/metamask": "8.0.14-beta.0",
+    "@web3-react/network": "8.0.14-beta.0",
+    "@web3-react/types": "8.0.10-beta.0",
+    "@web3-react/url": "8.0.13-beta.0",
+    "@web3-react/walletconnect": "8.0.21-beta.0",
+    "@web3-react/walletlink": "8.0.20-beta.0"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
