--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@ethersproject/bignumber": "^5.4.2",
+    "@ethersproject/experimental": "^5.5.0",
+    "@ethersproject/providers": "^5.5.1",
+    "@ethersproject/units": "^5.4.0",
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.0.0",
     "@fortawesome/pro-light-svg-icons": "^6.0.0",
     "@fortawesome/pro-solid-svg-icons": "^6.0.0",
     "@fortawesome/pro-thin-svg-icons": "^6.0.0",
@@ -21,6 +26,15 @@
     "@nomiclabs/hardhat-ganache": "^2.0.1",
     "@openzeppelin/contracts": "^4.5.0",
     "@walletconnect/web3-provider": "^1.7.1",
+    "@web3-react/core": "8.0.18-beta.0",
+    "@web3-react/eip1193": "8.0.13-beta.0",
+    "@web3-react/empty": "8.0.10-beta.0",
+    "@web3-react/metamask": "8.0.14-beta.0",
+    "@web3-react/network": "8.0.14-beta.0",
+    "@web3-react/types": "8.0.10-beta.0",
+    "@web3-react/url": "8.0.13-beta.0",
+    "@web3-react/walletconnect": "8.0.21-beta.0",
+    "@web3-react/walletlink": "8.0.20-beta.0",
     "awesome-react-icons": "^1.4.8",
     "bootstrap": "5.1.3",
     "formik": "^2.2.9",
@@ -30,22 +44,9 @@
     "react-bootstrap": "^2.2.0",
     "react-dom": "17.0.2",
     "react-slick": "^0.28.1",
-    "slick-carousel": "^1.8.1",
     "sass": "^1.49.9",
-    "swiper": "^8.0.7",
-    "@ethersproject/bignumber": "^5.4.2",
-    "@ethersproject/experimental": "^5.5.0",
-    "@ethersproject/providers": "^5.5.1",
-    "@ethersproject/units": "^5.4.0",
-    "@web3-react/core": "8.0.18-beta.0",
-    "@web3-react/eip1193": "8.0.13-beta.0",
-    "@web3-react/empty": "8.0.10-beta.0",
-    "@web3-react/metamask": "8.0.14-beta.0",
-    "@web3-react/network": "8.0.14-beta.0",
-    "@web3-react/types": "8.0.10-beta.0",
-    "@web3-react/url": "8.0.13-beta.0",
-    "@web3-react/walletconnect": "8.0.21-beta.0",
-    "@web3-react/walletlink": "8.0.20-beta.0"
+    "slick-carousel": "^1.8.1",
+    "swiper": "^8.0.7"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
