--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "awesome-react-icons": "^1.4.8",
     "bootstrap": "5.1.3",
     "formik": "^2.2.9",
+    "jotai": "^1.6.1",
     "keccak": "^3.0.2",
     "next": "12.0.10",
     "normalize.css": "^8.0.1",
