--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "@reach/dialog": "^0.16.2",
     "@rebass/forms": "^4.0.6",
     "@types/ms.macro": "^2.0.0",
-    "@types/react-slick": "^0.23.8",
     "@types/rebass": "^4.0.10",
     "@types/styled-components": "^5.1.24",
     "@types/ua-parser-js": "^0.7.36",
@@ -52,11 +51,10 @@
     "react-dom": "17.0.2",
     "react-ga": "^3.3.0",
     "react-responsive": "^9.0.0-beta.6",
-    "react-slick": "^0.28.1",
     "react-spring": "^9.4.3",
     "react-use-gesture": "^9.1.3",
     "rebass": "^4.0.7",
-    "slick-carousel": "^1.8.1",
+    "swiper": "^8.0.7",
     "ua-parser-js": "^1.0.2",
     "zustand": "^3.7.1"
   },
