--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.21",
+    "@types/rebass__forms": "^4.0.6",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "chai": "^4.3.6",
     "dotenv": "^10.0.0",
