--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "@google/model-viewer": "^1.10.1",
     "@reach/dialog": "^0.16.2",
     "@rebass/forms": "^4.0.6",
+    "@types/d3-dsv": "^3.0.0",
+    "@types/d3-time-format": "^4.0.0",
     "@types/ms.macro": "^2.0.0",
     "@types/rebass": "^4.0.10",
+    "@types/rebass__forms": "^4.0.6",
     "@types/styled-components": "^5.1.24",
     "@types/ua-parser-js": "^0.7.36",
     "@typescript-eslint/parser": "^5.14.0",
@@ -43,9 +46,16 @@
     "@web3-onboard/injected-wallets": "^2.0.2",
     "@web3-onboard/react": "^2.0.3",
     "copy-to-clipboard": "^3.3.1",
+    "cross-fetch": "^3.1.5",
+    "d3-dsv": "^3.0.1",
+    "d3-time-format": "^4.1.0",
+    "express": "^4.17.3",
     "formik": "^2.2.9",
     "jotai": "^1.6.1",
+    "kaktana-react-lightweight-charts": "^2.0.0",
     "keccak": "^3.0.2",
+    "lightweight-charts": "^3.8.0",
+    "lmdb": "^2.2.5",
     "next": "12.0.10",
     "normalize.css": "^8.0.1",
     "polished": "^4.1.4",
@@ -76,11 +86,12 @@
     "@typechain/ethers-v5": "^9.0.0",
     "@typechain/hardhat": "^5.0.0",
     "@types/chai": "^4.3.0",
+    "@types/express": "^4.17.13",
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "chai": "^4.3.6",
-    "dotenv": "^10.0.0",
+    "dotenv": "^16.0.0",
     "eslint": "^8.8.0",
     "eslint-config-next": "12.0.10",
     "eslint-config-prettier": "^8.3.0",
@@ -100,6 +111,7 @@
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solhint": "^3.3.7",
     "solidity-coverage": "^0.7.20",
+    "ts-node": "^10.7.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typechain": "^7.0.1",
     "typescript": "^4.6.2",
