--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@emotion/css": "^11.7.1",
     "@emotion/react": "^11.8.2",
+    "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.8.1",
     "@ethersproject/bignumber": "^5.4.2",
     "@ethersproject/experimental": "^5.5.0",
@@ -32,8 +33,7 @@
     "@fortawesome/react-fontawesome": "^0.1.17",
     "@fullpage/react-fullpage": "^0.1.19",
     "@google/model-viewer": "^1.10.1",
-    "@reach/dialog": "^0.16.2",
-    "@rebass/forms": "^4.0.6",
+    "@mui/material": "^5.5.1",
     "@types/d3-dsv": "^3.0.0",
     "@types/d3-time-format": "^4.0.0",
     "@types/ms.macro": "^2.0.0",
@@ -57,15 +57,10 @@
     "lightweight-charts": "^3.8.0",
     "lmdb": "^2.2.5",
     "next": "12.0.10",
-    "normalize.css": "^8.0.1",
-    "polished": "^4.1.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-ga": "^3.3.0",
     "react-responsive": "^9.0.0-beta.6",
-    "react-spring": "^9.4.3",
-    "react-use-gesture": "^9.1.3",
-    "rebass": "^4.0.7",
     "swiper": "^8.0.7",
     "ua-parser-js": "^1.0.2",
     "zustand": "^3.7.1"
