--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-ga": "^3.3.0",
+    "react-use": "^17.3.2",
     "swiper": "^8.0.7",
     "ua-parser-js": "^1.0.2",
     "zustand": "^3.7.1"
