--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@fullpage/react-fullpage": "^0.1.19",
     "@google/model-viewer": "^1.10.1",
     "@mui/material": "^5.5.1",
+    "@mui/x-data-grid": "^5.6.1",
     "@types/d3-dsv": "^3.0.0",
     "@types/d3-time-format": "^4.0.0",
     "@types/ms.macro": "^2.0.0",
