--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "d3-time-format": "^4.1.0",
     "express": "^4.17.3",
     "formik": "^2.2.9",
+    "framer-motion": "^6.2.8",
     "jotai": "^1.6.1",
     "kaktana-react-lightweight-charts": "^2.0.0",
     "keccak": "^3.0.2",
