--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/d3-dsv": "^3.0.0",
     "@types/d3-time-format": "^4.0.0",
     "@types/ms.macro": "^2.0.0",
+    "@types/react-lines-ellipsis": "^0.15.1",
     "@types/styled-components": "^5.1.24",
     "@types/ua-parser-js": "^0.7.36",
     "@typescript-eslint/parser": "^5.14.0",
@@ -60,6 +61,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-ga": "^3.3.0",
+    "react-lines-ellipsis": "^0.15.0",
     "react-player": "^2.10.0",
     "react-use": "^17.3.2",
     "swiper": "^8.0.7",
