--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "@ethersproject/experimental": "^5.5.0",
     "@ethersproject/providers": "^5.5.1",
     "@ethersproject/units": "^5.4.0",
-    "@fortawesome/fontawesome-svg-core": "^1.3.0",
-    "@fortawesome/free-brands-svg-icons": "^6.0.0",
-    "@fortawesome/pro-light-svg-icons": "^6.0.0",
-    "@fortawesome/pro-solid-svg-icons": "^6.0.0",
-    "@fortawesome/pro-thin-svg-icons": "^6.0.0",
-    "@fortawesome/react-fontawesome": "^0.1.17",
+    "@fortawesome/fontawesome-svg-core": "^6.1.0",
+    "@fortawesome/free-brands-svg-icons": "^6.1.0",
+    "@fortawesome/pro-light-svg-icons": "^6.1.0",
+    "@fortawesome/pro-solid-svg-icons": "^6.1.0",
+    "@fortawesome/pro-thin-svg-icons": "^6.1.0",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@fullpage/react-fullpage": "^0.1.19",
     "@google/model-viewer": "^1.10.1",
     "@mui/material": "^5.5.1",
@@ -59,6 +59,7 @@
     "lmdb": "^2.2.5",
     "next": "12.0.10",
     "react": "17.0.2",
+    "react-device-detect": "^2.1.2",
     "react-dom": "17.0.2",
     "react-ga": "^3.3.0",
     "react-lines-ellipsis": "^0.15.0",
