--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.0",
     "@fortawesome/free-brands-svg-icons": "^6.1.0",
     "@fortawesome/pro-light-svg-icons": "^6.1.0",
+    "@fortawesome/pro-regular-svg-icons": "^6.1.1",
     "@fortawesome/pro-solid-svg-icons": "^6.1.0",
     "@fortawesome/pro-thin-svg-icons": "^6.1.0",
     "@fortawesome/react-fontawesome": "^0.1.18",
