--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "zustand": "^3.7.1"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^12.1.0",
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@nomiclabs/hardhat-ganache": "^2.0.1",
