--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/styled-components": "^5.1.24",
     "@types/ua-parser-js": "^0.7.36",
     "@typescript-eslint/parser": "^5.14.0",
+    "@usedapp/coingecko": "^0.4.4",
     "@usedapp/core": "^0.12.1",
     "@web3-onboard/core": "^2.0.10",
     "@web3-onboard/injected-wallets": "^2.0.2",
