--- a/tsconfig.hardhat.json
+++ b/tsconfig.hardhat.json
@@ -1,12 +1,17 @@
 {
   "compilerOptions": {
-    "target": "es2018",
+    "target": "ES2017",
     "module": "commonjs",
+    "declaration": true,
+    "declarationMap": true,
+    "noImplicitAny": false,
+    "sourceMap": true,
     "strict": true,
+    "rootDirs": ["./src", "./scripts", "./test"],
     "esModuleInterop": true,
-    "outDir": "dist",
-    "baseUrl": "./"
+    "baseUrl": "./src"
   },
-  "include": ["./scripts", "./test"],
+  "exclude": ["dist", "node_modules"],
+  "include": ["./scripts", "./test", "./src"],
   "files": ["./hardhat.config.ts"]
 }
