--- a/package.json
+++ b/package.json
@@ -63,10 +63,12 @@
     "react-dom": "17.0.2",
     "react-ga": "^3.3.0",
     "react-lines-ellipsis": "^0.15.0",
+    "react-number-format": "^4.9.1",
     "react-player": "^2.10.0",
     "react-use": "^17.3.2",
     "swiper": "^8.0.7",
     "ua-parser-js": "^1.0.2",
+    "use-debounce": "^7.0.1",
     "zustand": "^3.7.1"
   },
   "devDependencies": {
