--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "editor.codeActionsOnSave": {
     "source.fixAll": true
   },
+  "editor.formatOnSave": true,
   "solidity.linter": "solhint",
 }
