--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
     "hardhat": "^2.9.0",
+    "hardhat-exposed": "^0.2.3",
     "hardhat-gas-reporter": "^1.0.8",
     "markdown-pdf": "^10.0.0",
     "prettier": "^2.5.1",
