--- a/package.json
+++ b/package.json
@@ -33,6 +33,15 @@
     "@fortawesome/pro-solid-svg-icons": "^6.1.1",
     "@fortawesome/pro-thin-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@web3-react/coinbase-wallet": "8.0.25-beta.0",
+    "@web3-react/core": "8.0.22-beta.0",
+    "@web3-react/eip1193": "8.0.17-beta.0",
+    "@web3-react/empty": "8.0.11-beta.0",
+    "@web3-react/metamask": "8.0.18-beta.0",
+    "@web3-react/network": "8.0.17-beta.0",
+    "@web3-react/types": "8.0.11-beta.0",
+    "@web3-react/url": "8.0.16-beta.0",
+    "@web3-react/walletconnect": "8.0.25-beta.0",
     "@google/model-viewer": "^1.10.1",
     "@mui/material": "^5.5.1",
     "@mui/x-data-grid": "^5.6.1",
