--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "cross-fetch": "^3.1.5",
     "d3-dsv": "^3.0.1",
     "d3-time-format": "^4.1.0",
+    "envfile": "^6.17.0",
     "express": "^4.17.3",
     "formik": "^2.2.9",
     "framer-motion": "^6.2.8",
