--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "chai": "^4.3.6",
+    "cli-table": "^0.3.11",
     "dotenv": "^16.0.0",
     "eslint": "^8.8.0",
     "eslint-config-next": "12.0.10",
