--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "react-player": "^2.10.0",
     "react-use": "^17.3.2",
     "swiper": "^8.0.7",
+    "swr": "^1.3.0",
     "twitter-api-v2": "^1.11.2",
     "ua-parser-js": "^1.0.2",
     "uint8arrays": "^3.0.0",
