--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "keccak": "^3.0.2",
     "lightweight-charts": "^3.8.0",
     "next": "12.0.10",
+    "next-seo": "^5.4.0",
     "react": "^17.0.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "17.0.2",
