--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "@fortawesome/pro-thin-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@google/model-viewer": "^1.11.0",
-    "@mui/material": "^5.5.1",
+    "@mui/material": "^5.6.2",
+    "@react-three/drei": "^9.5.0",
+    "@react-three/fiber": "^8.0.12",
     "@shopify/screenshot-glb": "^1.8.0",
     "@types/react-lines-ellipsis": "^0.15.1",
     "@types/styled-components": "^5.1.24",
@@ -57,11 +59,12 @@
     "kaktana-react-lightweight-charts": "^2.0.0",
     "keccak": "^3.0.2",
     "lightweight-charts": "^3.8.0",
-    "next": "12.0.10",
+    "next": "^12.1.5",
+    "next-compose-plugins": "^2.2.1",
     "next-seo": "^5.4.0",
-    "react": "^17.0.2",
+    "react": "^18.0.0",
     "react-device-detect": "^2.1.2",
-    "react-dom": "17.0.2",
+    "react-dom": "^18.0.0",
     "react-error-boundary": "^3.1.4",
     "react-ga": "^3.3.0",
     "react-intl": "^5.24.8",
@@ -71,6 +74,7 @@
     "react-use": "^17.3.2",
     "swiper": "^8.0.7",
     "swr": "^1.3.0",
+    "three": "^0.139.2",
     "twitter-api-v2": "^1.11.2",
     "ua-parser-js": "^1.0.2",
     "uint8arrays": "^3.0.0",
@@ -98,6 +102,7 @@
     "@types/express": "^4.17.13",
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.21",
+    "@types/three": "^0.139.0",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
     "chai": "^4.3.6",
@@ -122,6 +127,7 @@
     "hardhat-exposed": "^0.2.3",
     "hardhat-gas-reporter": "^1.0.8",
     "markdown-pdf": "^10.0.0",
+    "next-transpile-modules": "^9.0.0",
     "prettier": "^2.5.1",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solhint": "^3.3.7",
