--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
     "swiper": "^8.0.7",
     "swr": "^1.3.0",
     "three": "^0.139.2",
+    "three.meshline": "^1.4.0",
+    "threejs-meshline": "^2.0.12",
     "twitter-api-v2": "^1.11.2",
     "ua-parser-js": "^1.0.2",
     "uint8arrays": "^3.0.0",
