--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-dom": "^18.0.0",
     "react-error-boundary": "^3.1.4",
     "react-ga": "^3.3.0",
+    "react-horizontal-timeline": "^1.5.3",
     "react-lines-ellipsis": "^0.15.0",
     "react-number-format": "^4.9.1",
     "react-player": "^2.10.0",
