--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@react-three/drei": "^9.5.0",
     "@react-three/fiber": "^8.0.12",
     "@shopify/screenshot-glb": "^1.8.0",
+    "@types/cli-table": "^0.3.0",
     "@types/react-lines-ellipsis": "^0.15.1",
     "@types/styled-components": "^5.1.24",
     "@types/ua-parser-js": "^0.7.36",
