--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
-#// use `yarn hardhat deploy --network rinkeby`
+#// use `yarn hardhat deploy --network goerli`
 
 PRIVATE_KEY="0x0"
 
 ETHERSCAN_API_KEY=""
 CMC_API_KEY=""
 INFURA_KEY=""
-NETWORK=4
+NETWORK=5
 
 INFURA_IPFS_NODE="https://ipfs.infura.io:5001"
 INFURA_IPFS_GATEWAY="https://magebrotherhood.infura-ipfs.io"
