--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "next": "^12.1.5",
     "next-compose-plugins": "^2.2.1",
     "next-seo": "^5.4.0",
+    "nextjs-cors": "^2.1.1",
     "react": "^18.0.0",
     "react-device-detect": "^2.1.2",
     "react-dom": "^18.0.0",
