--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "hardhat": "hardhat --tsconfig ./tsconfig.hardhat.json",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "hardhat": "hardhat --tsconfig ./tsconfig.hardhat.json"
   },
   "resolutions": {
     "@walletconnect/ethereum-provider": "1.7.1"
@@ -33,10 +31,8 @@
     "@mui/material": "^5.6.2",
     "@react-three/drei": "^9.5.0",
     "@react-three/fiber": "^8.0.12",
-    "@shopify/screenshot-glb": "^1.8.0",
     "@types/cli-table": "^0.3.0",
     "@types/react-lines-ellipsis": "^0.15.1",
-    "@types/styled-components": "^5.1.24",
     "@types/ua-parser-js": "^0.7.36",
     "@walletconnect/ethereum-provider": "^1.7.8",
     "@web3-react/coinbase-wallet": "8.0.25-beta.0",
@@ -65,7 +61,6 @@
     "react-dom": "^18.0.0",
     "react-error-boundary": "^3.1.4",
     "react-ga": "^3.3.0",
-    "react-horizontal-timeline": "^1.5.3",
     "react-lines-ellipsis": "^0.15.0",
     "react-number-format": "^4.9.1",
     "react-player": "^2.10.0",
@@ -87,13 +82,6 @@
     "@nomiclabs/hardhat-ganache": "^2.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.5.0",
-    "@react-theming/storybook-addon": "^1.1.5",
-    "@storybook/addon-actions": "^6.3.12",
-    "@storybook/addon-essentials": "^6.3.12",
-    "@storybook/addon-links": "^6.3.12",
-    "@storybook/builder-webpack5": "^6.3.12",
-    "@storybook/manager-webpack5": "^6.3.12",
-    "@storybook/react": "^6.3.12",
     "@typechain/ethers-v5": "^9.0.0",
     "@typechain/hardhat": "^5.0.0",
     "@types/chai": "^4.3.0",
@@ -119,7 +107,7 @@
     "eslint-plugin-react-hooks": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "ethereum-waffle": "^3.4.0",
+    "ethereum-waffle": "^3.4.3",
     "ethers": "^5.5.4",
     "hardhat": "^2.9.3",
     "hardhat-exposed": "^0.2.3",
