--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@fortawesome/pro-solid-svg-icons": "^6.1.1",
     "@fortawesome/pro-thin-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@mailchimp/mailchimp_marketing": "^3.0.75",
     "@mui/material": "^5.6.2",
     "@react-three/drei": "^9.5.0",
     "@react-three/fiber": "^8.0.12",
     "@types/cli-table": "^0.3.0",
+    "@types/mailchimp__mailchimp_marketing": "^3.0.5",
     "@types/react-lines-ellipsis": "^0.15.1",
     "@types/ua-parser-js": "^0.7.36",
     "@walletconnect/ethereum-provider": "^1.7.8",
