--- a/.env.example
+++ b/.env.example
@@ -27,4 +27,5 @@ NEXT_PUBLIC_PLAYABLES_ADDRESS=$PLAYABLES_ADDRESS
 NEXT_PUBLIC_PROMOTER_ADDRESS=$PROMOTER_ADDRESS
 NEXT_PUBLIC_EXCHANGE_ADDRESS=$EXCHANGE_ADDRESS
 
+# from hardhat
 DEPLOY_ARGS=""
